{
    "name": "GameInputManager",
    "maps": [
        {
            "name": "Movement",
            "id": "f77c912a-1ec8-451e-bc97-2a6f8e66631d",
            "actions": [
                {
                    "name": "LeftRight",
                    "type": "Value",
                    "id": "b1897c1b-bbf4-438d-ba1c-6eae071ec90e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ForwardBack",
                    "type": "Value",
                    "id": "c3114de7-93e9-47d1-997b-5b2c9bd73a49",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "sprintInput",
                    "type": "Value",
                    "id": "372d9cd2-93ec-4930-abdd-a8ab0c0486ea",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "64f96085-cdf3-4803-bcb9-59ae714f70e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8570d5c2-c004-41ba-a739-b1485ad10564",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ea4c88a-203b-478e-ad7d-741cc9cfa8f3",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61571d4a-aa29-4b8e-ba42-ae01e4100ccf",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sprintInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db222975-2664-454b-935b-aa89fc1206f1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "e30d18af-55e1-491c-81c6-5aa91b67e9c6",
            "actions": [
                {
                    "name": "Xmove",
                    "type": "Value",
                    "id": "8eac73bf-0fe1-4330-b275-4965a7fa437e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Ymove",
                    "type": "Value",
                    "id": "f14cc737-ed19-4550-9368-f905b1a64e9f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c4689b9-cf57-445f-95fc-7826242c205a",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Xmove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c9ee679-1d66-4196-ac92-9bafe63d1a52",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ymove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Fight",
            "id": "7f3fbdf8-f793-44be-90e7-f5605651f7f6",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "900493ca-7aa7-4c47-964f-6fac9ef40118",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "76aae71b-2967-4b5d-bf70-dd41bfc9f443",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Counter",
                    "type": "Button",
                    "id": "14de529e-94cb-47cf-ac34-c5134db3633c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DistAttack",
                    "type": "Button",
                    "id": "d1443b69-51ac-4436-be3b-ff79698ec652",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d998e2c8-34e8-4aae-b16d-529e703de005",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b593c0a0-c3fb-4c90-908d-0fb5a38cb01b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d21d523c-12d4-4d2e-ac89-cd0c75c3da20",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Counter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64043491-e2e7-4224-a1de-0d8f8de910e7",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DistAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Running",
            "id": "8364b869-2dbd-4d48-ac5a-511efab563aa",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "d3223917-b24d-465d-99b1-62c97c7fcfd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa74b3da-6996-4217-835e-e411c00a7a68",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BallInput",
            "id": "966c20a4-a51b-41f4-998d-603a3a0e6cff",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b2c59bbf-0703-41e8-b7a3-39b6ab631adf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeState",
                    "type": "Button",
                    "id": "28ebc255-9bf3-402e-b01d-a2253d9e14aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grapple",
                    "type": "Button",
                    "id": "4e87cd02-704c-44ae-bacf-13bb2b1e5c6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e90469ea-645e-4de6-af11-3d1762d737f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpDown",
                    "type": "Value",
                    "id": "9e6ae07b-4760-48cd-b534-83b3e44b8eaf",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c3563e8-38c6-4869-bd6f-f34ebf26e0c7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "595f91c6-e4d9-4959-80d5-e0e161ee6309",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "19300212-cb21-49d2-b010-fc68eccbd3c2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "eeb552bd-27cc-4b8e-b457-8a505b6797dd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "802bd30d-4f00-4d5c-8b47-e376dd963068",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eb136e32-ce13-4f3d-b634-fb7fbfa620a0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2e69dfe0-d1dc-45e2-afc1-8187be1f2f03",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeState",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a5e5382-d0e7-4b4c-827f-293e403383df",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeState",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f037b2f-0c5a-4724-88cb-07d01bc1e7a8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grapple",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1066210-e8d1-4a8b-b8ee-218649d31bd3",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grapple",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5edeed5e-8c1d-4d19-9b76-813d2f12c6b0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a535f6e5-f22e-438f-aeea-59aa397d7a82",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "controller",
                    "id": "0ba3b1fe-5683-46b8-aff0-5fb1df05e5ee",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5bb9d994-ca82-41bc-bd72-2caedc64c1c2",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "923c84e2-88c1-4f14-926f-fa38bf7fe9e7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "keyboard",
                    "id": "6bec68db-9fa4-474b-b413-dc96d8175720",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "221e1125-163f-48d4-865b-49258b9c6713",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "217b96f4-ed0e-4ab3-8e79-6c8476325040",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}